fix spacing between name and caption

--- a/styles-contact.css
+++ b/styles-contact.css
@@ -96,7 +96,7 @@ h2 {
 	font-size: 1.4em;
     line-height: 1.4em;
     color: rgb(0, 0, 0);
-    padding: 0px 0px;
+    padding: 0px 5px;
     margin: 0px auto 25px auto;
 }
 
